@@ -68,7 +68,7 @@ def docProjects() {
 	subprojects.findAll { !it.name.contains('uat') }
 }
 
-def projectVersion = '1.7.0-beta.14';
+def projectVersion = '1.7.0-SNAPSHOT';
 
 configure(docProjects()) {
 	apply plugin: "signing"
