@@ -13,6 +13,7 @@ import org.mini2Dx.core.serialization.SerializationException;
 import org.mini2Dx.uats.util.ScreenIds;
 import org.mini2Dx.ui.UiContainer;
 import org.mini2Dx.ui.element.AlignedModal;
+import org.mini2Dx.ui.element.Column;
 
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.assets.AssetManager;
@@ -89,8 +90,16 @@ public class UiSerializationUAT extends BasicGameScreen {
 			failureMessage = "'column1' is null";
 			return false;
 		}
+		final Column column = (Column) modal.getElementById("column1");
+		
 		if(modal.getElementById("image") == null) {
 			failureMessage = "'image' is null";
+			
+			if(column.getTotalChildren() == 0) {
+				failureMessage += ". Element was not deserialized";
+			} else if(!column.get(0).getId().equals("image")) {
+				failureMessage += ". Id was stored as " + column.get(0).getId();
+			}
 			return false;
 		}
 		if(modal.getElementById("label") == null) {
